@@ -328,3 +328,6 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E283,extras-openmoji,smileys-emotion,annoyed face with tongue,"disappointed, playful, goofy, tongue out, annoyed, frustrated, childish, offended",Barkin Simsek,2021-01-16
 🏴️‍🅰️,1F3F4-FE0F-200D-1F170-FE0F,extras-openmoji,flags,"red and black flag","anarchist flag, bisected flag",Sam Hocevar,2021-03-15
 ,E20E,extras-openmoji,travel-places,foggy mountain,"fog, weather, berg, peak, elevation, hiking",Jonas Dunkel,2019-05-07
+,E0C7,extras-openmoji,food-drink,cake,"custard, cherry",Miriam Vollmeier,2018-04-18
+,E0C8,extras-openmoji,food-drink,champignon brown,"mushroom fungi",Liz Bravo,2021-05-04
+,E0C9,extras-openmoji,food-drink,champignon white,"mushroom fungi",Liz Bravo,2021-05-04
