@@ -3666,6 +3666,9 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E0C4,extras-openmoji,food-drink,pomegranate,,"pomegranate, fruit, seeds",Carlin MacKenzie,2019-12-18,,,,,,
 ,E0C5,extras-openmoji,food-drink,latte macchiato,,coffee,Alexander Müller,2020-05-11,,,,,,
 ,E0C6,extras-openmoji,food-drink,roasted coffee bean,,,Alexander Müller,2020-05-11,,,,,,
+,E0C7,extras-openmoji,food-drink,cake,,"custard, cherry",Miriam Vollmeier,2018-04-18,,,,,,
+,E0C8,extras-openmoji,food-drink,champignon brown,,mushroom fungi,Liz Bravo,2021-05-04,,,,,,
+,E0C9,extras-openmoji,food-drink,champignon white,,mushroom fungi,Liz Bravo,2021-05-04,,,,,,
 ,E340,extras-openmoji,gardening,gardener man,,,Fanny Jung,2020-06-11,,,,,,
 ,E341,extras-openmoji,gardening,gardener woman,,,Fanny Jung,2020-06-11,,,,,,
 ,E342,extras-openmoji,gardening,gardening gloves,,,Fanny Jung,2020-06-11,,,,,,
