@@ -62339,6 +62339,57 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E0C7",
+    "group": "extras-openmoji",
+    "subgroups": "food-drink",
+    "annotation": "cake",
+    "tags": "",
+    "openmoji_tags": "custard, cherry",
+    "openmoji_author": "Miriam Vollmeier",
+    "openmoji_date": "2018-04-18",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E0C8",
+    "group": "extras-openmoji",
+    "subgroups": "food-drink",
+    "annotation": "champignon brown",
+    "tags": "",
+    "openmoji_tags": "mushroom fungi",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2021-05-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E0C9",
+    "group": "extras-openmoji",
+    "subgroups": "food-drink",
+    "annotation": "champignon white",
+    "tags": "",
+    "openmoji_tags": "mushroom fungi",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2021-05-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E340",
     "group": "extras-openmoji",
